# ubgpd

./: .gitignore  Cargo.toml  Dockerfile.ubgp  README.md  build.rs  ubgpd.conf
.github/workflows/: cicd.yml  integration.yml
proto/: ubgp.proto
src/: bgp.rs  config.rs  error.rs  fib.rs  grpc.rs  main.rs  neighbor.rs  rib.rs  speaker.rs  ubgpc.rs  ubgpd.rs
src/bgp/: attributes.rs  attributes_tests.rs  capabilities.rs  capabilities_tests.rs  codec.rs  codec_tests.rs  messages.rs  messages_tests.rs  mod.rs  nlri.rs  nlri_tests.rs  tests.rs  types.rs  types_tests.rs
src/neighbor/: capabilities.rs  connection.rs  fsm.rs  fsm_tests.rs  message_handler.rs  mod.rs  session.rs  timers.rs  types.rs
src/speaker/: connection.rs  events.rs  manager.rs  mod.rs  types.rs
tests/integration/: Dockerfile.ubgp  docker-compose-dev.yml  docker-compose.yml  frr.conf  gobgp.conf  integration.rs  integration_test.sh  ubgpd.conf
tests/integration/frr/: frr.conf
