[package]
name = "ubgpd"
version = "0.1.0"
authors = ["Eric Lauriault <eric.lauriault@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.2", features = ["codec"]}
tokio-stream = "0.1"
tokio-io = "0.1"
tokio-test = "*"
bytes = "1"
num-traits = "0.2"
num-derive = "0.2"
derive_builder = "^0.9"
byteorder = "1.4.2"
async-std = "1"
futures = "0.3"
# structopt = { version = "0.3" }
thiserror = "1.0"
ipnet = "2.0"
toml = "0.5"
serde = { version = "1.0" }
serde_derive = "1.0"
rtnetlink = "*"
ipnetwork = "*"
libc = "0.2"
netlink-packet-route = "*"
netlink-packet = { version = "*", features= ["rtnetlink"]}
netlink-sys = "*"
netlink-proto = "*"
clap = { version = "^3", features = ["derive"]}
